resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-2.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::BitFieldsTest1 { /* Size=0x4 */
  /* 0x0000 */ uint32_t b1 : 1; /* BitPos=0 */
  /* 0x0000 */ uint32_t b2 : 1; /* BitPos=1 */
  /* 0x0000 */ uint32_t b3 : 30; /* BitPos=2 */
};
