resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-20.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::BitFieldsTest6 { /* Size=0x2 */
  /* 0x0000 */ uint16_t b1 : 3; /* BitPos=0 */
  /* 0x0000 */ uint16_t : 2; /* BitPos=3 */
  /* 0x0000 */ uint16_t b2 : 6; /* BitPos=5 */
  /* 0x0000 */ uint16_t b3 : 2; /* BitPos=11 */
};
