resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-22.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::NestedStructUnionRegression1 { /* Size=0x78 */
  /* 0x0000 */ _LIST_ENTRY TransactionListEntry;
  /* 0x0010 */ resym_test::_CM_INTENT_LOCK* KCBLock;
  /* 0x0018 */ resym_test::_CM_INTENT_LOCK* KeyLock;
  /* 0x0020 */ _LIST_ENTRY KCBListEntry;
  /* 0x0030 */ resym_test::_CM_KEY_CONTROL_BLOCK* KeyControlBlock;
  /* 0x0038 */ resym_test::_CM_TRANS* Transaction;
  /* 0x0040 */ uint32_t UoWState;
  /* 0x0044 */ resym_test::UoWActionType ActionType;
  /* 0x0048 */ resym_test::HSTORAGE_TYPE StorageType;
  /* 0x0050 */ resym_test::_CM_KCB_UOW* ParentUoW;
  union {
    /* 0x0058 */ resym_test::_CM_KEY_CONTROL_BLOCK* ChildKCB;
    /* 0x0058 */ uint32_t VolatileKeyCell;
    struct {
      /* 0x0058 */ uint32_t OldValueCell;
      /* 0x005c */ uint32_t NewValueCell;
    };
    /* 0x0058 */ uint32_t UserFlags;
    /* 0x0058 */ _LARGE_INTEGER LastWriteTime;
    /* 0x0058 */ uint32_t TxSecurityCell;
    struct {
      /* 0x0058 */ resym_test::_CM_KEY_CONTROL_BLOCK* OldChildKCB;
      /* 0x0060 */ resym_test::_CM_KEY_CONTROL_BLOCK* NewChildKCB;
    };
    struct {
      /* 0x0058 */ resym_test::_CM_KEY_CONTROL_BLOCK* OtherChildKCB;
      /* 0x0060 */ uint32_t ThisVolatileKeyCell;
    };
  };
  union {
    /* 0x0068 */ void* PrepareDataPointer;
    /* 0x0068 */ resym_test::_CM_UOW_SET_SD_DATA* SecurityData;
    /* 0x0068 */ resym_test::_CM_UOW_KEY_STATE_MODIFICATION* ModifyKeysData;
    /* 0x0068 */ resym_test::_CM_UOW_SET_VALUE_LIST_DATA* SetValueData;
  };
  union {
    /* 0x0070 */ resym_test::_CM_UOW_SET_VALUE_KEY_DATA* ValueData;
    /* 0x0070 */ resym_test::_CMP_DISCARD_AND_REPLACE_KCB_CONTEXT* DiscardReplaceContext;
  };
};
