resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-7.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
enum resym_test::EnumTest2 : unsigned char {
  kEnumTest2Val1 = 0x0000,
  kEnumTest2Val2 = 0x0001,
  kEnumTest2Val3 = 0x0002,
};
