resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-8.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::StructUnnamedUdtTest1 { /* Size=0xa0 */
  union {
    struct {
      /* 0x0000 */ uint32_t i1;
      /* 0x0004 */ uint32_t i2;
      union {
        /* 0x0008 */ uint32_t i3;
        /* 0x0008 */ uint32_t i4;
      };
    };
    /* 0x0000 */ uint32_t i5;
    struct {
      /* 0x0000 */ uint32_t i21;
      /* 0x0004 */ uint32_t i22;
      /* 0x0008 */ uint32_t i23;
    };
    /* 0x0000 */ resym_test::PrimitiveTypesTest s1;
    /* 0x0000 */ uint64_t QuadPart;
  };
  /* 0x0070 */ uint64_t QuadPart2;
  /* 0x0078 */ uint64_t QuadPart3;
  union {
    /* 0x0080 */ uint32_t Reserved;
    struct {
      /* 0x0080 */ unsigned char Type;
      /* 0x0081 */ unsigned char Reserved1;
      /* 0x0082 */ uint16_t Reserved2;
    };
  };
  /* 0x0084 */ int32_t i6;
  /* 0x0088 */ int32_t i7;
  union {
    /* 0x0090 */ void* c1;
    /* 0x0090 */ char c2;
  };
  /* 0x0098 */ int32_t i8;
  /* 0x009c */ int32_t i9;
};
