resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-9.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::StructUnnamedUdtTest2 { /* Size=0x30 */
  /* 0x0000 */ uint64_t Before;
  union {
    struct {
      /* 0x0008 */ uint64_t u1;
      /* 0x0010 */ uint64_t u2;
    };
    struct {
      /* 0x0008 */ uint64_t* p1;
      /* 0x0010 */ uint64_t* p2;
    };
  };
  /* 0x0018 */ uint64_t Middle;
  union {
    /* 0x0020 */ uint64_t u3;
    /* 0x0020 */ uint64_t* p3;
  };
  /* 0x0028 */ uint64_t After;
};
